# viser-sandbox

./: .pre-commit-config.yaml  README.md  mediamtx.yml  pyproject.toml
scripts/: mediamtx_linux.sh  mediamtx_osx.sh
tools/: hi.py
viser_sandbox/: env.py
viser_sandbox/scripts/: export_yolov8.py  gui.py
viser_sandbox/scripts/assets/: mdx_example.mdx
viser_sandbox/util/: video_capture.py
